--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,16 @@
 name: Docker Build Images
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
     paths-ignore:
       - README.md
+
+env:
+  IMAGE_NAME: 'easypi/openrefine'
+  OPENREFINE_VERSION: '3.5.2'
 
 jobs:
   release:
@@ -25,12 +30,41 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
-          tags: easypi/openrefine:latest
+          build-args: |
+            OPENREFINE_VERSION=${{ env.OPENREFINE_VERSION }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.OPENREFINE_VERSION }}
+            ${{ env.IMAGE_NAME }}:latest
           push: true
 
-      - uses: slackapi/slack-github-action@v1.16.0
+      - if: ${{ always() }}
+        uses: slackapi/slack-github-action@v1.16.0
         with:
           channel-id: github
-          slack-message: 'docker build "easypi/openrefine" ok'
+          payload: |
+            {
+              "attachments": [
+                {
+                  "color": "${{ job.status == 'success' && 'good' || 'danger' }}",
+                  "title": "${{ github.repository }}",
+                  "title_link": "https://github.com/${{ github.repository }}",
+                  "text": "docker build image result",
+                  "fields": [
+                    {
+                      "title": "Image",
+                      "value": "<https://hub.docker.com/r/${{ env.IMAGE_NAME }}|${{ env.IMAGE_NAME }}>",
+                      "short": true
+                    },
+                    {
+                      "title": "Status",
+                      "value": "${{ job.status }}",
+                      "short": true
+                    }
+                  ],
+                  "footer": "Github Actions",
+                  "footer_icon": "https://github.githubassets.com/favicon.ico"
+                }
+              ]
+            }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
