--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ on:
       - README.md
 
 env:
-  IMAGE_NAME: 'easypi/openrefine'
+  IMAGE_NAME: 'vimagick/openrefine'
   OPENREFINE_VERSION: '3.7.1'
 
 jobs:
