--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,7 @@ on:
       - README.md
 
 env:
+  PLATFORMS: 'linux/amd64,linux/arm64'
   IMAGE_NAME: 'vimagick/openrefine'
   OPENREFINE_VERSION: '3.7.1'
 
@@ -29,7 +30,7 @@ jobs:
 
       - uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ env.PLATFORMS }}
           build-args: |
             OPENREFINE_VERSION=${{ env.OPENREFINE_VERSION }}
           tags: |
