--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   PLATFORMS: 'linux/amd64,linux/arm64'
-  IMAGE_NAME: 'vimagick/openrefine'
+  IMAGE_NAME: 'easypi/openrefine'
   OPENREFINE_VERSION: '3.7.4'
 
 jobs:
